[gd_scene load_steps=9 format=3 uid="uid://crf53qj6swmkt"]

[ext_resource type="Script" path="res://src/scenes/Playfield.gd" id="1_sre72"]
[ext_resource type="FontFile" uid="uid://ggggasvo4rei" path="res://resources/fonts/Xolonium-Regular.ttf" id="2_5lts3"]
[ext_resource type="Texture2D" uid="uid://bu6oit3lyavas" path="res://resources/pictures/water_background.jpg" id="2_s8gfr"]
[ext_resource type="PackedScene" uid="uid://b8rp2hocdnlwt" path="res://src/scenes/MessageLabel.tscn" id="3_w85ra"]
[ext_resource type="AudioStream" uid="uid://eesvn3yxwwgg" path="res://src/scenes/lofi-2-312707.mp3" id="5_mjlct"]
[ext_resource type="AudioStream" uid="uid://bi1hlkedlktly" path="res://src/scenes/deep-breathing-sound.mp3" id="6_voae5"]

[sub_resource type="GDScript" id="GDScript_wblo3"]
script/source = "extends CanvasLayer

signal menu_button_pressed

func update_score(score: int) -> void:
	$ScoreLabel.text = str(score)

func set_mode(mode: Playfield.Mode) -> void:
	var text: String
	match mode:
		Playfield.Mode.FIRST_OUT:
			text = 'FIRST OUT'
		Playfield.Mode.LAST_ONE_STANDING:
			text = 'LAST ONE STANDING'
		Playfield.Mode.COOP:
			text = 'COOP'
		_:
			text = ''
	$ModeLabel.text = text

func _on_menu_button_pressed():
	menu_button_pressed.emit()
"

[sub_resource type="GDScript" id="GDScript_ytq3d"]
script/source = "extends CanvasLayer


func show_message(text: String) -> void:
	$Message.show_message(text)

func show_temp_message(text: String) -> Signal:
	return $Message.show_temp_message(text)
"

[node name="Playfield" type="Node"]
script = ExtResource("1_sre72")
game_mode = null
game_border = null

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1448.0
offset_bottom = 1248.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_s8gfr")
stretch_mode = 2

[node name="Players" type="Node" parent="."]

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/scenes/WiFiPlayer.tscn")
spawn_path = NodePath("../Players")

[node name="Mobs" type="Node" parent="."]

[node name="MobSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/scenes/WiFiMob.tscn")
spawn_path = NodePath("../Mobs")

[node name="HUD" type="CanvasLayer" parent="."]
script = SubResource("GDScript_wblo3")

[node name="ModeLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_top = 59.0
offset_right = 22.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5lts3")
theme_override_font_sizes/font_size = 32
text = " 	"
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = 65.0
offset_right = -29.0
offset_bottom = 143.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_5lts3")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -149.0
offset_top = 17.0
offset_right = -29.0
offset_bottom = 59.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_5lts3")
text = "Back"

[node name="HUD Message" type="CanvasLayer" parent="."]
script = SubResource("GDScript_ytq3d")

[node name="Message" parent="HUD Message" instance=ExtResource("3_w85ra")]

[node name="Background Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mjlct")
volume_db = -17.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_voae5")
volume_db = -5.0

[connection signal="despawned" from="PlayerSpawner" to="." method="_on_player_spawner_despawned"]
[connection signal="spawned" from="PlayerSpawner" to="." method="_on_player_spawner_spawned"]
[connection signal="menu_button_pressed" from="HUD" to="." method="_on_hud_menu_button_pressed"]
[connection signal="pressed" from="HUD/MenuButton" to="HUD" method="_on_menu_button_pressed"]
[connection signal="finished" from="Background Music" to="." method="play_music"]
